feat: climate style of the container

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <h2>
                 <i class="fa-solid fa-location-dot"></i>
                 <span id="city">Mació</span>
-                <img src="" alt="country flag" id="country">
+                <img src="https://flagsapi.com/BR/flat/64.png" alt="country flag" id="country">
             </h2>
             <p id="temperature"><span>38</span>&deg;C</p>
             <div id="description-container">
                 <p id="description">Nublado</p>
-                <image src="" alt="Condicion weather" id="weather-icon"></image>
+                <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="Condicion weather" id="weather-icon"></image>
             </div>
             <div id="details-container">
                 <p id="umidity">
