feat: sets temperature information to the screen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="Condicion weather" id="weather-icon"></image>
             </div>
             <div id="details-container">
-                <p id="umidity">
+                <p id="humidity">
                     <i class="fa-solid fa-droplet"></i>
                     <span>48%</span>
                 </p>
