--- a/index.html
+++ b/index.html
@@ -31,28 +31,31 @@
                 </button>
             </div>
         </div>
-        <div id="weather-data">
+        <div id="weather-data" class="hide">
             <h2>
                 <i class="fa-solid fa-location-dot"></i>
-                <span id="city">Mació</span>
-                <img src="https://flagsapi.com/BR/flat/64.png" alt="country flag" id="country">
+                <span id="city"></span>
+                <img src="" alt="country flag" id="country">
             </h2>
-            <p id="temperature"><span>38</span>&deg;C</p>
+            <p id="temperature"><span></span>&deg;C</p>
             <div id="description-container">
-                <p id="description">Nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" width="50px" height="50px" alt="Condicion weather" id="weather-icon"></image>
+                <p id="description"></p>
+                <img src="" width="50px" height="50px" alt="Condicion weather" id="weather-icon"></image>
             </div>
             <div id="details-container">
                 <p id="humidity">
                     <i class="fa-solid fa-droplet"></i>
-                    <span>48%</span>
+                    <span></span>
                 </p>
 
                 <p id="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>3km/h</span>
+                    <span></span>
                 </p>
             </div>
+        </div>
+        <div id="error-message" class="hide">
+            <p>Não foi possível encontrar o clima de uma cidade com este nome.</p>
         </div>
     </div>
 
