--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         <div id="error-message" class="hide">
             <p>Não foi possível encontrar o clima de uma cidade com este nome.</p>
         </div>
+        <div id="suggestions">
+            <button id="viena">Viena</button>
+            <button id="copenhague">Copenhague</button>
+            <button id="zurique">Zurique</button>
+            <button id="vancouver">Vancouver</button>
+            <button id="genebra">Genebra</button>
+            <button id="frankfurt">Frankfurt</button>
+            <button id="osaka">Osaka</button>
+            <button id="maceio">Maceió</button>
+        </div>
     </div>
 
 </body>
